# seq2seq

./: .gitignore  README.md  environment.yml  fold_it.sh  pyproject.toml  test_dataset.ipynb
config/: global.json  pred.json  test.json  train.json
data/ArchiveII/ArchiveII_seq_sim_pp_motifs/: test_0.csv  test_1.csv  test_2.csv  test_3.csv  test_4.csv  train_0.csv  train_1.csv  train_2.csv  train_3.csv  train_4.csv  valid_0.csv  valid_1.csv  valid_2.csv  valid_3.csv  valid_4.csv
data/ArchiveII/Kfold/: fold_0_test.csv  fold_0_train.csv  fold_0_val.csv  fold_1_test.csv  fold_1_train.csv  fold_1_val.csv  fold_2_test.csv  fold_2_train.csv  fold_2_val.csv  fold_3_test.csv  fold_3_train.csv  fold_3_val.csv  fold_4_test.csv  fold_4_train.csv  fold_4_val.csv
data/ArchiveII/fam-split/: test_srp.csv  test_tRNA.csv  train_srp.csv  train_tRNA.csv  valid_srp.csv  valid_tRNA.csv
data/ArchiveII/seq-similarity/: test_0.csv  test_1.csv  test_2.csv  test_3.csv  test_4.csv  train_0.csv  train_1.csv  train_2.csv  train_3.csv  train_4.csv  valid_0.csv  valid_1.csv  valid_2.csv  valid_3.csv  valid_4.csv
results/FlatNoise/Train_w_noise_0_1/: fold_it.sh
results/mlflow/: mlruns.db
results/model_4_4/model_4_4_skip0_Optim_lr/: fold_it.sh
sample/config/: global.json  test.json  train.json
scripts/: batch_test.sh  execute_kfold.sh  fold_it.sh  fold_it_test.sh  generic_hyperparams.sh  plain_latents.sh  test.sh  test_w_swap.sh  train.sh  train_test.sh  train_w_noise.sh
src/seq2seq/: __init__.py  dataset.py  embeddings.py  metrics.py  model.py  parser.py  utils.py
(+4880 files in other folders)
