[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seq2seq"
version = "0.1.0"
description = "Autoencoder sequence-to-sequence: an end-to-end method for RNA sequence prediction based on deep learning"
authors = [
    {name = "Guillermo Kulemeyer", email = "gkulemeyer@sinc.unl.edu.ar"}
]


requires-python = ">=3.9"
dependencies = [
    "torch==2.1.0",
    "pandas==2.0.2",
    "numpy==1.24.2",
    "scikit-learn==1.2.1",
    "tqdm==4.64.1",
    "mlflow",
    "lightning"
]

readme = "README.md"
[project.urls]
homepage = "https://github.com/Gisch97"
repository = "https://github.com/Gisch97/AEseq2seq"

[project.scripts]
seq2seq = "seq2seq:main"